--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "@mui/styled-engine": "^5.13.2",
     "@mui/styled-engine-sc": "^5.12.0",
     "axios": "^1.4.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.14.2",
+    "react-router-dom": "^6.14.2",
+    "sort-by": "^1.2.0",
     "styled-components": "^6.0.6"
   },
   "devDependencies": {
