--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
     "sort-by": "^1.2.0",
-    "styled-components": "^6.0.6"
+    "styled-components": "^6.0.6",
+    "swiper": "^10.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
